app/assets/stylesheets/events.scss
.back_pic{
  height: 500px;
}

.search_container{
  position: relative;
  top:-58px;
  left: 30em;
  display: inline-block;
}

.well.form_container{
  margin: 20px 20% 20% 20%;
  background-color: #EAE8E8;
  padding: 3em;
  border-radius: 10px;
  .form_field{
    margin-bottom: 2em;
  }
}

#new_event{
  display: block;
  margin: 0px auto;
  #map{
    height: 500px;
    width: 100%;
    background-color: #ccc;
    margin: 5px;
  }
}
.going{
  margin-top: 15px;
}
.eventShowCard{
  .card{
    width: 70%;
    display: block;
    margin: 0px auto;
    &:hover {
      cursor: initial;

      img {
        opacity: 1;
      }
    }
    .card-image{
      width: 50%;
      display: block;
      margin: 0px auto;
      min-width: 91%;
    }
  }
}

